  and are settled down into their lowest-seen states.  An example house that
  had electronics which took 16 steps to resolve, on a 108-move robbery, took
  1.5 seconds to simulate on the server.  Setting the max step count to 32 will
  limit the server load to simulations longer than about 3 seconds (also
  reducing client timeouts and retries).



Version 29  Live Server Fixes 

--Fixed server stats code to track new users as unique users for that day.





Version 29  2014-January-14

--Improved shroud by thickening it over walls and moving it north to line up
  with the tops of walls instead of the bottoms of walls.  Obscures objects
  around corners much better now.

--Fixed some more narrow-gap visibility issues, forbidding islands of
  visibility surrounded by invisible areas.

--Pulled shroud back slightly on wired walls to make their internals more
  visible (thanks Hippasus).

--Changed what can be reached by throws to not be obstructed by intervening
  objects, assuming that the target is both visible and reachable (thanks
  Arakira).

--Added a publicly known shared secret between the client and the server to
  prevent unfairly modded clients from connecting to the server without the
  modder realizing the implications (thanks Zed).

--Changed to included shared secret in map encryption for maps sent with
  start_rob_house.

--Changed to encrypt robbery end maps sent back by client through end_rob_house
  so that raw robbery maps never appear in protocol.

--Fixed so that text of robbery house map is never left lingering in freed RAM.

--Added a blockSubInfo property that prevents an object state from having a
  state-specific tool tip.

--Added signatures for all object state properties.txt files.

--Added signatures for all tool reach.txt files.

--Added signature for transitions.txt file.

--Added support for signing certain sprites (like wires).

--Added backtraces to server warning log messages.
